Fix what I suspect to be a rendering bug in Firefox
A paragraph with italic text in it overflows the block on the right hand
side. As the paragraph I noticed this problem on had overflow set to hidden
some of the letters were being cut off. Adding a small bit of padding to the
right of the paragraph fixes the problem.

--- a/css/docs.css
+++ b/css/docs.css
@@ -111,6 +111,9 @@ div.docs div#content blockquote p {
 	font-style:italic;
 	margin-left:0px;
 	margin-bottom:0;
+	/* Fix what appears to be a rendering bug in FF. The italic letters
+	 * were being cut off on the right. */
+	padding-right: 6px;
 }
 
 div.docs div#content blockquote p code {
